<resources>
    <string name="app_name">Cinema Popup</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Melhor Avaliados</string>
    <string name="upcoming">Novidades</string>
    <string name="reviews">Resenhas</string>
    <string name="trailers">Trailers</string>
    <string name="sinopse">Sinopse</string>
    <string name="activity_login">Entrar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_senha">Senha</string>
    <string name="prompt_conf_senha">Confirmar Senha</string>
    <string name="action_login">Entrar</string>
    <string name="action_sign_in">Cadastro</string>
    <string name="reset_senha">Esqueci minha senha</string>
    <string name="voltar">Voltar</string>
    <string name="resetPageInfo">Você receberá um e-mail para redefinir sua senha.</string>
    <string name="enviarEmail">Enviar</string>
    <string name="facebook_app_id">321825535410236</string>
    <string name="fb_login_protocol_scheme">fb321825535410236</string>
    <string name="profile_title">Perfil</string>
    <string name="logout">Sair</string>
    <string name="about">Sobre</string>
    <string name="app_version">Versão 1.1.19</string>
    <string name="copyright">©CinemaPopup 2019 - All Rights Reserved</string>
</resources>
