<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile"
        android:title="@string/profile_title"
        android:enabled="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:enabled="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:enabled="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/sort"
        android:enabled="true"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="Sort"
        app:showAsAction="always" />
</menu>