<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginTop="170dp"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_cinemapopup_splash_set" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textAlignment="center"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textColor="#fff"
                android:textAlignment="center"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                android:textColor="#fff"
                android:textAlignment="center"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/btnBack"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:text="@string/voltar" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>